fixed submit button being too large on mobile

--- a/app/client/stylesheets/custom.css
+++ b/app/client/stylesheets/custom.css
@@ -15,7 +15,7 @@
 }
 
 .btn-submit {
-    width: 600px;
+    width: 100%;
     height: 36px;
     font-size: 18px;
 }
